--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@tanstack/react-query": "4.33.0",
     "@tanstack/react-query-devtools": "4.33.0",
     "antd": "^5.22.1",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "i18next": "^24.0.5",
     "react": "^18.3.1",
     "react-content-loader": "^7.0.2",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.3",
     "react-icons": "^5.3.0",
     "react-imask": "^7.6.1",
     "react-responsive": "^10.0.0",
