--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "6.3.0",
     "screenfull": "^6.0.2",
+    "swiper": "11.1.14",
     "uniqid": "^5.4.0",
     "zustand": "^5.0.1"
   },
