--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.3",
     "react-icons": "^5.3.0",
+    "react-image": "^4.1.0",
     "react-imask": "^7.6.1",
     "react-responsive": "^10.0.0",
     "react-router-dom": "6.3.0",
